--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Drafts
+draft/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -169,3 +172,10 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Python Lex-Yacc parser
+parsetab.py
+parser.out
+
+# VS Code
+.vscode/
